--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
+    <link href="assets/css/style.css" type="text/css" rel="stylesheet" >
   </head>
   <body>
-
+    <header>
+      <h1>Discover hidden places in the world around you</h1>
+      <p>
+        <a href="#">Download Excursion (Coming soon!)</a>
+      </p>
+    </header>
+    <main>
+      <div>
+        <h2>Your personal travel guide</h2>
+        <p>
+          Excursion remembers places you like, and recommends new points of interest around you.
+        </p>
+      </div>
+      <div>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p>
+          <a href="#">Download Excursion (Coming soon!)</a>
+        </p>
+      </div>
+    </main>
+    <footer>
+      &copy Excursion
+    </footer>
   </body>
 </html>
