--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
       <p>
         <a href="#">Download Excursion (Coming soon!)</a>
       </p>
+      <video autoplay muted loop>
+        <source src="assets/videos/excursion.mp4" type="video/mp4">Your browser does not support the video tag.
+      </video>
     </header>
     <main>
       <div>
         <h2>Your personal travel guide</h2>
         <p>
           Excursion remembers places you like, and recommends new points of interest around you.
+        </p>
+        <p>
+          <img src="assets/images/camp.jpg" />
+        </p>
+        <p>
+          <img src="assets/images/phone.png" />
         </p>
       </div>
       <div>
