Add final CSS styles

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           Excursion remembers places you like, and recommends new points of interest around you.
         </p>
         <p>
-          <img src="assets/images/camp.jpg" />
+          <img src="assets/images/camp.jpg" alt="Arizona Dessert Camp"/>
         </p>
         <p>
-          <img src="assets/images/phone.png" />
+          <img src="assets/images/phone.png" alt="Icon"/>
         </p>
       </div>
       <div>
@@ -36,7 +36,7 @@
       </div>
     </main>
     <footer>
-      &copy Excursion
+      &copy; Excursion
     </footer>
   </body>
 </html>
